# c-playground

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: hello.h
src/: design.txt  hello.c  main.c
tests/: main_test.c
